# scalar-rs

./: .gitignore  Cargo.toml  LICENSE  PROTO.md  README.md  scalar-sqlx.db  scalar-sqlx.db-shm  scalar-sqlx.db-wal
.cargo/: config.toml
.zed/: settings.json
drc-cms/: Cargo.toml
drc-cms/hi.rocksdb/: 000087.sst  000090.sst  IDENTITY  MANIFEST-000092
drc-cms/src/: main.rs
scalar/: Cargo.toml
scalar-axum/: Cargo.toml
scalar-axum/examples/: test.rs
scalar-axum/src/: expire_map.rs  img.rs  lib.rs  oidc.rs
scalar-cms/: Cargo.toml
scalar-cms/examples/: hello_world.rs
scalar-cms/src/: db.rs  editor_field.rs  editor_type.rs  lib.rs  types.rs  validations.rs
scalar-cms/src/internals/: ts.rs
scalar-cp/: bun.lockb  package.json  svelte.config.js  uno.config.ts  vite.config.ts
scalar-cp/src/: app.d.ts  app.html  hooks.server.ts
scalar-cp/src/lib/: EditorField.ts  EditorType.ts  EnumVariant.ts  api.ts  field-component.ts  state.svelte.ts  types.d.ts  utils.ts
scalar-cp/src/lib/components/: Checkbox.svelte  DateTimeInput.svelte  EnumDropdown.svelte  Field.svelte  Form.svelte  IntegerInput.svelte  Label.svelte  MarkdownInput.svelte  MultiLineInput.svelte  SingleLineInput.svelte
scalar-cp/src/lib/components/types/: ArrayInput.svelte  BoolInput.svelte  ColorInput.svelte  DateTimeInput.svelte  EnumDropdown.svelte  FileInput.svelte  FloatInput.svelte  ImageInput.svelte  IntegerInput.svelte  MarkdownInput.svelte  MultiLineInput.svelte  SingleLineInput.svelte  StructInput.svelte  ToggleInput.svelte
scalar-cp/src/lib/components/types/color/: PickerIndicator.svelte  TextInput.svelte  Wrapper.svelte
scalar-cp/src/lib/components/types/user/: index.ts
scalar-cp/src/lib/css/: base.css  carta-theme-scalar.css  splash.css
scalar-cp/src/lib/server/: api.ts
scalar-cp/src/routes/: +layout.server.ts  +layout.svelte  +layout.ts  +page.svelte  +page.ts
scalar-cp/src/routes/(auth)/: +layout.svelte
scalar-cp/src/routes/(auth)/login/: +page.svelte  +page.ts
scalar-cp/src/routes/(auth)/login/oidc/: +page.svelte  +page.ts
scalar-cp/src/routes/(main)/: +layout.svelte  +layout.ts  +page.svelte
scalar-cp/src/routes/(main)/docs/[doc]/: +layout.ts  +page.svelte
scalar-cp/src/routes/(main)/docs/[doc]/[doc_id]/edit/: +page.svelte  +page.ts
scalar-cp/src/routes/(main)/docs/[doc]/create/: +page.svelte  +page.ts
scalar-cp/src/routes/docs/[doc]/: +layout.server.ts  +layout.svelte  +layout.ts
scalar-cp/src/routes/docs/[doc]/[doc_id]/edit/: +page.server.ts  +page.svelte  +page.ts  +server.ts
scalar-cp/src/routes/docs/[doc]/create/: +page.server.ts  +page.svelte  +page.ts  +server.ts
scalar-cp/src/routes/docs/[slug]/edit/: +page.svelte  +page.ts
scalar-cp/src/routes/login/: +page.server.ts  +page.svelte
scalar-derive/: Cargo.toml
scalar-derive/src/: lib.rs
scalar-expr/: Cargo.toml
scalar-expr-macro/: Cargo.toml
scalar-expr-macro/src/: lib.rs
scalar-expr/examples/: test.rs
scalar-expr/src/: lib.rs
scalar-img/: Cargo.toml
scalar-img/examples/: test.rs
scalar-img/src/: axum.rs  bucket.rs  lib.rs
scalar-sqlx/: Cargo.toml
scalar-sqlx/migrations/: 20251004213020_users-table.sql  20251011193719_doc-tables.sql
scalar-sqlx/src/: lib.rs  sqlite.rs
scalar-surreal/: Cargo.toml
scalar-surreal/src/: lib.rs
scalar-types/: README.md  index.d.ts  package.json
scalar-types-color/: Cargo.toml
scalar-types-color/src/: lib.rs
scalar-types/types/: DocInfo.ts  EditorType.ts  Item.ts  Schema.ts
scalar/bindings/: EditorField.ts  EditorType.ts  Item.ts
scalar/examples/: hello_world.rs
scalar/src/: db.rs  editor_field.rs  editor_type.rs  lib.rs  validations.rs
xtask/: Cargo.toml
xtask/src/: main.rs
