[workspace]
resolver = "3"
members = [
    "scalar-cms",
    "scalar-axum",
    "scalar-derive",
    "scalar-img",
    "scalar-surreal",
    "scalar-sqlx", "scalar-expr", "scalar-expr-macro",
]

[workspace.dependencies]
openidconnect = {version = "4", default-features = true}
serde = "1"
serde_json = "1"
thiserror = "2"
tracing = "0.1"
url = "2.5"

[workspace.lints.clippy]
pedantic = "warn"
