[package]
name = "drc-cms"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
axum = "0.7.9"
axum-macros = "0.4.2"
hmac = "0.12.1"
jwt = "0.16.0"
scalar = { version = "0.1.0", path = "../scalar" }
scalar-axum = { version = "0.1.0", path = "../scalar-axum" }
serde = "1"
serde_json = "1.0.133"
sha2 = "0.10.8"
surrealdb = { version = "2.0.4", features = ["kv-rocksdb"] }
tokio = { version = "1.41.1", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.1", features = ["cors"] }
