[package]
name = "scalar-axum"
license = "MIT OR Apache-2.0"
description = "axum adapter for scalar, a data oriented, [I'M NOT GOING TO SAY IT], ergonomic cms system"
authors = ["Joe \"drac\" Sorensen <hello@murl.digital>"]
version = "0.1.2"
edition = "2021"

[features]
img = ["dep:scalar-img"]

[dependencies]
axum = "0.8"
rgb = { version = "0.8", features = ["serde"] }
scalar-cms = { version = "0.1.0", path = "../scalar-cms", features = ["rgb"] }
scalar-img = { version = "0.1.0", path = "../scalar-img", optional = true }
thiserror = "2"
serde = "1"
serde_json = "1"
tokio-util = { version = "0.7.14", features = ["io"] }
tokio-stream = "0.1.17"

[dev-dependencies]
scalar-axum = { version = "*", features = ["img"], path = "." }
surrealdb = { version = "2.1", default-features = false, features = [
    "kv-rocksdb",
] }
rust-s3 = "0.35"
axum = { version = "0.8", features = ["multipart", "http2"] }
axum-macros = "0.5"
scalar-img = { path = "../scalar-img" }
scalar-surreal = { path = "../scalar-surreal" }
tokio = { version = "1", features = ["rt-multi-thread", "fs"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
thiserror = "2"
dotenvy = "0.15.7"
anyhow = { version = "1.0.98", features = ["backtrace"] }
url = "2.5.4"
