[package]
name = "scalar-cms"
license = "MIT OR Apache-2.0"
description = "a data oriented, [I'M NOT GOING TO SAY IT], ergonomic cms system"
authors = ["Joe \"drac\" Sorensen <hello@murl.digital>"]
version = "0.1.2"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
nanoid = "0.4"
rgb = { version = "0.8", optional = true, features = ["serde"] }
scalar-derive = { version = "0.1.0", path = "../scalar-derive" }
# rc is enabled for EditorType, the copying issue is fine in this case, because we're dealing with a schema type.
# serde = {workspace = true}
serde_json = {workspace = true}
serde = { workspace = true, features = ["derive", "rc"] }
openidconnect = {workspace = true, default-features = false}
thiserror = {workspace = true}
tracing = {workspace = true}
trait-variant = "0.1"
ts-rs = { version = "11", features = ["chrono-impl"] }
url = { workspace = true, optional = true, features = ["serde"] }

[features]
url = ["dep:url"]
rgb = ["dep:rgb"]

[[example]]
name = "hello_world"
required-features = ["rgb"]

[lints]
workspace = true
