[package]
name = "scalar-derive"
license = "MIT OR Apache-2.0"
description = "derive macros for scalar, a data oriented, [I'M NOT GOING TO SAY IT], ergonomic cms system"
authors = ["Joe \"drac\" Sorensen <hello@murl.digital>"]
version = "0.1.2"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
syn = { version = "2", features = ["full"] }
quote = "1"
darling = "0.20"
convert_case = "0.6"

[lints]
workspace = true
