[package]
name = "scalar-img"
version = "0.1.0"
edition = "2021"

[dependencies]
base64-url = "3"
bytes = "1.10.1"
image = { version = "0.25" }
image_hasher = "3"
rust-s3 = "0.35"
scalar = { version = "0.1.0", path = "../scalar", features = ["url"] }
serde = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt"] }
tracing = "0.1"
url = { version = "2", features = ["serde"] }

[dev-dependencies]
axum = "0.8.3"
tokio = { version = "1", features = ["rt-multi-thread"] }
