[package]
name = "scalar-sqlx"
version = "0.0.0"
edition = "2024"

[features]
sqlite = ["sqlx/sqlite"]

[dependencies]
argon2 = {version = "0.5.3", features = ["std"]}
rusty_paseto = "0.7.2"
scalar-cms = { version = "0.1.2", path = "../scalar-cms" }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", default-features = false, features = ["macros", "migrate", "chrono", "json"] }
openidconnect = "4"
thiserror = "2.0.17"
tracing = "0.1"

[lints]
workspace = true
