[package]
name = "scalar-sqlx"
version = "0.0.0"
edition = "2024"

[features]
sqlite = ["sqlx/sqlite"]
oidc = ["scalar-cms/oidc"]

[dependencies]
argon2 = {version = "0.5.3", features = ["std"]}
rusty_paseto = "0.7.2"
scalar-cms = { version = "0.1", path = "../scalar-cms" }
serde_json = {workspace = true}
sqlx = { version = "0.8.6", default-features = false, features = ["macros", "migrate", "chrono", "json"] }
openidconnect = {workspace = true}
thiserror = {workspace = true}
tracing = {workspace = true}

[lints]
workspace = true
