[package]
name = "scalar-surreal"
version = "0.1.0"
edition = "2021"

[dependencies]
scalar = { version = "0.1.0", path = "../scalar" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
surrealdb = { version = "2", default-features = false }
tracing = "0.1"

[dev-dependencies]
surrealdb = { version = "2", default-features = false, features = [
    "protocol-ws",
] }
tokio = { version = "1", features = ["rt-multi-thread"] }
