[package]
name = "scalar-surreal"
license = "MIT OR Apache-2.0"
description = "surrealdb driver for scalar, a data oriented, [I'M NOT GOING TO SAY IT], ergonomic cms system"
version = "0.1.2"
edition = "2021"

[dependencies]
scalar-cms = { version = "0.1.0", path = "../scalar-cms" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
surrealdb = { version = "2", default-features = false }
tracing = "0.1"

[dev-dependencies]
surrealdb = { version = "2", default-features = false, features = [
    "protocol-ws",
] }
tokio = { version = "1", features = ["rt-multi-thread"] }
