[package]
name = "scalar"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
nanoid = "0.4"
rgb = { version = "0.8", optional = true, features = ["serde"] }
scalar-derive = { version = "0.1.0", path = "../scalar-derive" }
# rc is enabled for EditorType, the copying issue is fine in this case, because we're dealing with a schema type.
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
trait-variant = "0.1"
ts-rs = { version = "9", features = ["chrono-impl"] }
url = { version = "2.5", optional = true, features = ["serde"] }

[features]
url = ["dep:url"]
rgb = ["dep:rgb"]

[[example]]
name = "hello_world"
required-features = ["rgb"]
